--- a/static/scss/PUB/_Component_cards-v3.scss
+++ b/static/scss/PUB/_Component_cards-v3.scss
@@ -136,10 +136,6 @@
 
     .card__inner {
         padding: 1em 30px;
-
-        .card__body {
-            @include max-lines(2, $line-height-base);
-        }
     }
 }
 
@@ -226,6 +222,12 @@
         .card__image,
         .card__inner {
             width: 50%;
+        }
+
+        .card__inner {
+            .card__body {
+                @include max-lines(2, $line-height-base);
+            }
         }
     }
 
